o) fix scaling of shapes o) fix ungrouping of scaled shapes o) add unit test for both

BUG: 227512

svn path=/trunk/koffice/; revision=1171560